Update publication scripts and remove old entries

--- a/publications.html
+++ b/publications.html
@@ -26,29 +26,16 @@
     <h1 style="text-align: center;">Research Publications and Presentations</h1>
     
     <h2>Journal Articles (*Corresponding Author)</h2>
-    <script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FedB7rFQhMigfT2xuj&noBootstrap=1&jsonp=1"></script>
+    <script src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2Fr7a96oa7h2epkbtx9i3gj%2Fjournal_articles.bib%3Frlkey%3Di7n06rxxkldh5u4zx6jmlhqj9%26st%3Dpcgen67c%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
 
     <h2>In Progress and Submitted Manuscripts</h2>
-    <ol reversed>
-        <li>Bazarnovi, S., <strong>Cokyasar*, T.</strong>, Verbas, O., &amp; Mohammadian, A. K. Problem of locating and allocating charging equipment for battery electric buses under stochastic charging demand. Under Review. <a href="https://arxiv.org/pdf/2408.05278">[Available here]</a></li>
-        <li>Bazarnovi, S., <strong>Cokyasar*, T.</strong>, Verbas, O., &amp; Mohammadian, A. K. Scheduling optimization of electric and conventional mixed transit bus fleets. Work in Progress.</li>
-        <li>Hosseini Dolatabadi, S. H., Bhuiyan, T. H., <strong>Cokyasar, T.</strong>, &amp; Subramanyam, A. An efficient branch-and-cut approach for routing of heterogeneous fleet of drones and ground vehicles to deliver time-sensitive products. Work in Progress.</li>
-        <li>Kaleem, W., <strong>Cokyasar*, T.</strong>, Larson, J., Verbas, O., Bhuiyan, T. H., &amp; Subramanyam, A. Extreme-scale EV charging infrastructure planning for last-mile delivery using high-performance parallel computing. Under Review. <a href="https://arxiv.org/pdf/2502.05152">[Available here]</a></li>
-        <li>Ng, M. T., Mahmassani, H., Tong, D., Verbas, O., &amp; <strong>Cokyasar, T.</strong> Joint optimization of multimodal transit frequency and shared autonomous vehicle fleet size with hybrid metaheuristic and nonlinear programming. Under Review. <a href="https://arxiv.org/pdf/2412.19401">[Available here]</a></li>
-        <li>Ng, T., Max, Raymer, M., Mahmassani, H., Verbas, O., &amp; <strong>Cokyasar, T.</strong> Equity impacts of public transit network redesign with shared autonomous mobility services. Under Review. <a href="https://arxiv.org/abs/2501.01615">[Available here]</a></li>
-        <li>Paul, J., Su, H., Gurumurthy, K. M., <strong>Cokyasar, T.</strong>, Auld, J., &amp; Jia, Y. A study of financial impacts of pooled rideshare based on assignment strategies. Under Review.</li>
-        <li>Paul, J., Vankadaru, V., Gurumurthy, K. M., <strong>Cokyasar, T.</strong>, Auld, J., &amp; Jia, Y. Strategic deployment of TNCs for sustainable urban transportation: Insights from Austin. Under Review.</li>
-        <li>Vakayil, A., de Souza, F., <strong>Cokyasar, T.</strong>, Gurumurthy, K. M., &amp; Larson, J. Large-scale dynamic ridesharing with iterative assignment. <a href="https://arxiv.org/abs/2311.06160">[Available here]</a></li>
-        <li>Verbas, O., <strong>Cokyasar, T.</strong>, de Camargo, P. V., Gurumurthy, K. M., Zuniga-Garcia, N., &amp; Auld, J. Modeling transit in a fully integrated agent-based framework: Methodology and large-scale application. Under Review. <a href="https://arxiv.org/pdf/2408.05176">[Available here]</a></li>
-        <li>Verbas, O., <strong>Cokyasar, T.</strong>, Joyce-Johnson, S., Wainwright, S., Coates, M., Rousseau, A., Aloisi, J., Stewart, A., &amp; Auld, J. Impact of transit on mobility, equity, and economy in the Chicago metropolitan region. Under Review. <a href="https://arxiv.org/pdf/2409.04568">[Available here]</a></li>
-    </ol>
+    <script src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2F2nwsjcpbzpyn0h02h68ea%2Fwork_in_progress.bib%3Frlkey%3Dc4x7asypxegc0uoy0k4u9xyvk%26st%3Dpbf6x2kz%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
+
+    <h2>Conference Articles</h2>
+    <script src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2Fdr6gruw3yekkwb1wst4xz%2Fconference_articles.bib%3Frlkey%3D7gn6rj988kfzplpok24pdhx2x%26st%3Dp4mqs1wt%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
 
     <h2>Conference Presentations</h2>
-    <ol reversed>
-        <li>Bazarnovi, S., <strong>Cokyasar, T.</strong>, Verbas, O., &amp; Mohammadian, A. K. (2025). Strategic allocation of battery electric bus chargers under stochastic demand: A Chicago case study using metaheuristic approaches. 104th Transportation Research Board Annual Meeting. Poster presented by Bazarnovi, S. in Washington, DC, January 5-9.</li>
-        <li>Borlaug, B., Sahin, O., Yip, A., Sun, J., <strong>Cokyasar, T.</strong>, Mansour, C., Jadun, P., &amp; Muratori, M. (2025). Highly resolved transportation electricity load projections for the United States. 104th Transportation Research Board Annual Meeting. Poster presented by Borlaug, B. in Washington, DC, January 5-9.</li>
-        <li>Ismael, A., Sahin, O., Uhm, H.-s., Shen, H., Zuniga-Garcia, N., Huang, Y., <strong>Cokyasar, T.</strong>, Gurumurthy, K. M., Auld, J., &amp; Stinson, M. (2025). Integration and application of a freight agent-based simulation framework. 104th Transportation Research Board Annual Meeting. Poster presented by Ismael, A. in Washington, DC, January 5-9.</li>
-    </ol>
+    <script src="https://bibbase.org/show?bib=https%3A%2F%2Fwww.dropbox.com%2Fscl%2Ffi%2Foysukwvkwpj8fhvaof6ij%2Fconference_presentations.bib%3Frlkey%3Dw7ijd6pdo29vapvsug0ba72b9%26st%3Drxa7fqbv%26dl%3D1&commas=true&noBootstrap=1&jsonp=1"></script>
 </main>
 
 <footer>
