--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="research.html">Research</a>
     <a href="publications.html">Publications</a>
     <a href="service.html">Service and Awards</a>
-    <li><a href="advising.html">Advising & Mentorship</a></li>
+    <a href="advising.html">Advising & Mentorship</a>
 </nav>
 
 <main>
