Refactor advising.html for improved structure and styling

--- a/advising.html
+++ b/advising.html
@@ -1,82 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Advising & Mentorship | Taner Cokyasar</title>
-  <style>
-    /* Basic page styling */
-    body {
-      font-family: Arial, sans-serif; /* Change this if your site uses a specific font */
-      line-height: 1.6;
-      color: #333;
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    
-    /* Navigation styling (basic placeholder to match typical academic sites) */
-    nav {
-      margin-bottom: 40px;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 10px;
-    }
-    nav a {
-      margin-right: 15px;
-      text-decoration: none;
-      color: #0056b3;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    /* Styling for the Advising and Mentorship Section */
-    .advising-mentorship h2 {
-      font-size: 1.8em;
-      color: #222;
-      border-bottom: 2px solid #eaeaea;
-      padding-bottom: 10px;
-      margin-bottom: 25px;
-    }
-    .advising-mentorship ul {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-    }
-    .advising-mentorship li {
-      margin-bottom: 20px;
-      padding-left: 15px;
-      border-left: 3px solid #0056b3;
-      background-color: #fafafa;
-      padding: 15px;
-      border-radius: 0 5px 5px 0;
-    }
-    .advising-mentorship li strong {
-      color: #000;
-      font-size: 1.05em;
-    }
-    .advising-mentorship li em {
-      color: #555;
-    }
-    .advising-mentorship a {
-      color: #0056b3;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    .advising-mentorship a:hover {
-      text-decoration: underline;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dr. Taner Cokyasar | Advising & Mentorship</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Specific styles for the advising list */
+        .advising-mentorship h2 {
+            font-size: 1.8em;
+            color: #222;
+            border-bottom: 2px solid #eaeaea;
+            padding-bottom: 10px;
+            margin-bottom: 25px;
+        }
+        .advising-mentorship ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        .advising-mentorship li {
+            margin-bottom: 20px;
+            padding-left: 15px;
+            border-left: 3px solid #0056b3;
+            background-color: #fafafa;
+            padding: 15px;
+            border-radius: 0 5px 5px 0;
+        }
+        .advising-mentorship li strong {
+            color: #000;
+            font-size: 1.05em;
+        }
+        .advising-mentorship li em {
+            color: #555;
+        }
+        .advising-mentorship a {
+            color: #0056b3;
+            text-decoration: none;
+            font-weight: 500;
+        }
+        .advising-mentorship a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="advising.html">Advising & Mentorship</a>
-  </nav>
+<header>
+    <h1>Dr. Taner Cokyasar</h1>
+    <p>Computational Transportation Engineer | Argonne National Laboratory</p>
+</header>
 
-  <main class="advising-mentorship">
+<nav>
+    <a href="index.html">Home</a>
+    <a href="education.html">Education</a>
+    <a href="experience.html">Work Experience</a>
+    <a href="research.html">Research</a>
+    <a href="publications.html">Publications</a>
+    <a href="service.html">Service and Awards</a>
+    <a href="advising.html">Advising & Mentorship</a>
+</nav>
+
+<main class="advising-mentorship">
     <h2>Advising and Mentorship</h2>
     <ul>
       <li>
@@ -138,7 +123,16 @@
         Currently: Data Scientist at Starbucks
       </li>
     </ul>
-  </main>
+</main>
+
+<footer>
+    <p>9700 South Cass Ave | Lemont, IL 60439 | (706)-308-1492</p>
+    <p>
+        <a href="https://linkedin.com/in/taner-cokyasar/" target="_blank">LinkedIn</a> | 
+        <a href="https://github.com/tcokyasar44" target="_blank">GitHub</a> | 
+        <a href="mailto:tcokyasar@anl.gov">tcokyasar@anl.gov</a>
+    </p>
+</footer>
 
 </body>
 </html>
