Refactor education section in education.html
Updated the education section layout and formatting.

--- a/education.html
+++ b/education.html
@@ -20,30 +20,32 @@
     <a href="research.html">Research</a>
     <a href="publications.html">Publications</a>
     <a href="service.html">Service and Awards</a>
+    <a href="advising.html">Advising & Mentorship</a>
 </nav>
 
-<main>
-    <h1 style="text-align: center;">Education</h1>
+<main class="custom-layout">
+    <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Education</h1>
 
-    <ul>
+    <ul class="styled-list">
         <li>
-            <strong>Ph.D.</strong> in Industrial Engineering, The University of Tennessee, Knoxville, TN, USA. (May 2020)
+            <strong>Ph.D. in Industrial Engineering</strong> (May 2020)<br>
+            <em>The University of Tennessee, Knoxville, TN, USA.</em>
             <ul>
                 <li>Dissertation: Economic Feasibility of Adopting Additive Manufacturing for Low-volume Demand</li>
                 <li>Committee: Mingzhou Jin (advisor), Sean Willems, Xueping Li, James Ostrowski</li>
             </ul>
         </li>
-        <br>
         <li>
-            <strong>M.S.</strong> in Industrial Engineering, The University of Tennessee, Knoxville, TN, USA. (December 2016)
+            <strong>M.S. in Industrial Engineering</strong> (December 2016)<br>
+            <em>The University of Tennessee, Knoxville, TN, USA.</em>
             <ul>
                 <li>Thesis: A Mixed Integer Linear Programming Approach for Developing Salary Administration Systems</li>
                 <li>Committee: Alberto Garcia-Diaz (advisor), John Kobza, Rapinder Sawhney</li>
             </ul>
         </li>
-        <br>
         <li>
-            <strong>B.S.</strong> in Business Administration, Nevsehir University, Türkiye. (June 2012)
+            <strong>B.S. in Business Administration</strong> (June 2012)<br>
+            <em>Nevsehir University, Türkiye.</em>
         </li>
     </ul>
 </main>
