--- a/experience.html
+++ b/experience.html
@@ -20,127 +20,170 @@
     <a href="research.html">Research</a>
     <a href="publications.html">Publications</a>
     <a href="service.html">Service and Awards</a>
+    <a href="advising.html">Advising & Mentorship</a>
 </nav>
 
-<main>
-    <h1 style="text-align: center;">Work Experience</h1>
+<main class="custom-layout">
+    <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Work Experience</h1>
 
     <h2>Argonne National Laboratory — Lemont, IL, U.S.A.</h2>
-    <p><strong>Computational Transportation Engineer</strong> (July 2024 – Present)</p>
-    <ul>
-        <li>Lead development of computational models for optimizing freight and passenger transportation systems.</li>
-        <li>Design algorithms for vehicle routing, energy-efficient transit, and multi-modal network integration.</li>
-        <li>Collaborate with interdisciplinary teams on transportation infrastructure and policy analysis projects.</li>
-        <li>Support the deployment of data-driven decision tools for government and industry stakeholders.</li>
-    </ul>
-
-    <p><strong>Research Consultant</strong> (May 2021 – July 2024)</p>
-    <ul>
-        <li>Advised on transportation system modeling, focusing on freight logistics and public transit optimization.</li>
-        <li>Developed simulation frameworks to evaluate impacts of emerging transportation technologies.</li>
-        <li>Prepared technical reports and presentations for project sponsors and collaborators.</li>
-        <li>Conducted sensitivity analyses to inform policy and investment decisions.</li>
-    </ul>
-
-    <p><strong>Postdoctoral Appointee, Transportation System Modeler</strong> (May 2020 – May 2021)</p>
-    <ul>
-        <li>Researched integrated transportation-energy system interactions, emphasizing electric vehicle routing.</li>
-        <li>Created optimization models incorporating time, energy, and charging constraints.</li>
-        <li>Published findings in peer-reviewed journals and presented at scientific conferences.</li>
-        <li>Mentored junior researchers and contributed to proposal writing.</li>
-    </ul>
-
-    <p><strong>Visiting Student (Consultant)</strong> (January 2020 – May 2020)</p>
-    <ul>
-        <li>Supported development of transportation system performance metrics and data analytics.</li>
-        <li>Assisted in code development for scalable transportation simulation tools.</li>
-        <li>Collaborated remotely with research teams to integrate new modeling components.</li>
-    </ul>
-
-    <p><strong>W. J. Cody Associate Intern</strong> (May 2019 – August 2019)</p>
-    <ul>
-        <li>Assisted in transportation demand modeling and energy consumption analysis.</li>
-        <li>Processed and analyzed large transportation datasets to support ongoing projects.</li>
-        <li>Contributed to technical documentation and project presentations.</li>
+    <ul class="styled-list">
+        <li>
+            <strong>Computational Transportation Engineer</strong> (July 2024 – Present)
+            <ul>
+                <li>Lead development of computational models for optimizing freight and passenger transportation systems.</li>
+                <li>Design algorithms for vehicle routing, energy-efficient transit, and multi-modal network integration.</li>
+                <li>Collaborate with interdisciplinary teams on transportation infrastructure and policy analysis projects.</li>
+                <li>Support the deployment of data-driven decision tools for government and industry stakeholders.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Research Consultant</strong> (May 2021 – July 2024)
+            <ul>
+                <li>Advised on transportation system modeling, focusing on freight logistics and public transit optimization.</li>
+                <li>Developed simulation frameworks to evaluate impacts of emerging transportation technologies.</li>
+                <li>Prepared technical reports and presentations for project sponsors and collaborators.</li>
+                <li>Conducted sensitivity analyses to inform policy and investment decisions.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Postdoctoral Appointee, Transportation System Modeler</strong> (May 2020 – May 2021)
+            <ul>
+                <li>Researched integrated transportation-energy system interactions, emphasizing electric vehicle routing.</li>
+                <li>Created optimization models incorporating time, energy, and charging constraints.</li>
+                <li>Published findings in peer-reviewed journals and presented at scientific conferences.</li>
+                <li>Mentored junior researchers and contributed to proposal writing.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Visiting Student (Consultant)</strong> (January 2020 – May 2020)
+            <ul>
+                <li>Supported development of transportation system performance metrics and data analytics.</li>
+                <li>Assisted in code development for scalable transportation simulation tools.</li>
+                <li>Collaborated remotely with research teams to integrate new modeling components.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>W. J. Cody Associate Intern</strong> (May 2019 – August 2019)
+            <ul>
+                <li>Assisted in transportation demand modeling and energy consumption analysis.</li>
+                <li>Processed and analyzed large transportation datasets to support ongoing projects.</li>
+                <li>Contributed to technical documentation and project presentations.</li>
+            </ul>
+        </li>
     </ul>
 
     <h2>Tarsus University — Mersin, Türkiye</h2>
-    <p><strong>Assistant Professor</strong> (November 2021 – September 2022)</p>
-    <ul>
-        <li>Delivered undergraduate and graduate courses in transportation engineering and data science.</li>
-        <li>Supervised student research projects on transportation system optimization.</li>
-        <li>Developed new course materials and updated curriculum to include recent research trends.</li>
-        <li>Organized seminars and collaborated with industry partners for research funding.</li>
-    </ul>
-
-    <p><strong>Lecturer</strong> (March 2021 – November 2021)</p>
-    <ul>
-        <li>Taught foundational civil engineering courses focused on transportation planning and analysis.</li>
-        <li>Provided student mentoring and academic advising.</li>
-        <li>Participated in departmental meetings and contributed to academic committees.</li>
+    <ul class="styled-list">
+        <li>
+            <strong>Assistant Professor</strong> (November 2021 – September 2022)
+            <ul>
+                <li>Delivered undergraduate and graduate courses in transportation engineering and data science.</li>
+                <li>Supervised student research projects on transportation system optimization.</li>
+                <li>Developed new course materials and updated curriculum to include recent research trends.</li>
+                <li>Organized seminars and collaborated with industry partners for research funding.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Lecturer</strong> (March 2021 – November 2021)
+            <ul>
+                <li>Taught foundational civil engineering courses focused on transportation planning and analysis.</li>
+                <li>Provided student mentoring and academic advising.</li>
+                <li>Participated in departmental meetings and contributed to academic committees.</li>
+            </ul>
+        </li>
     </ul>
 
     <h2>Toros University — Mersin, Türkiye</h2>
-    <p><strong>Lecturer</strong> (March 2021 – November 2021)</p>
-    <ul>
-        <li>Instructed courses on traffic engineering and transportation systems modeling.</li>
-        <li>Supported students through office hours and tutoring sessions.</li>
-        <li>Assisted with curriculum development and evaluation.</li>
+    <ul class="styled-list">
+        <li>
+            <strong>Lecturer</strong> (March 2021 – November 2021)
+            <ul>
+                <li>Instructed courses on traffic engineering and transportation systems modeling.</li>
+                <li>Supported students through office hours and tutoring sessions.</li>
+                <li>Assisted with curriculum development and evaluation.</li>
+            </ul>
+        </li>
     </ul>
 
     <h2>The University of Tennessee — Knoxville, TN, U.S.A.</h2>
-    <p><strong>Graduate Research/Teaching Assistant</strong> (March 2017 – May 2020)</p>
-    <ul>
-        <li>Conducted research in additive manufacturing and supply chain optimization.</li>
-        <li>Assisted faculty in delivering lectures and preparing course materials.</li>
-        <li>Graded assignments and exams, and supported student learning activities.</li>
-        <li>Presented research findings at academic conferences.</li>
-        <li>Taught supply chain engineering courses.</li>
-    </ul>
-
-    <p><strong>Note Taker &amp; Test Proctor, Student Disability Services</strong> (August 2015 – March 2017)</p>
-    <ul>
-        <li>Provided note-taking services and test administration for students with disabilities.</li>
-        <li>Ensured compliance with accessibility and accommodation standards.</li>
+    <ul class="styled-list">
+        <li>
+            <strong>Graduate Research/Teaching Assistant</strong> (March 2017 – May 2020)
+            <ul>
+                <li>Conducted research in additive manufacturing and supply chain optimization.</li>
+                <li>Assisted faculty in delivering lectures and preparing course materials.</li>
+                <li>Graded assignments and exams, and supported student learning activities.</li>
+                <li>Presented research findings at academic conferences.</li>
+                <li>Taught supply chain engineering courses.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Note Taker &amp; Test Proctor, Student Disability Services</strong> (August 2015 – March 2017)
+            <ul>
+                <li>Provided note-taking services and test administration for students with disabilities.</li>
+                <li>Ensured compliance with accessibility and accommodation standards.</li>
+            </ul>
+        </li>
     </ul>
 
     <h2>Republic of Turkey Ministry of National Education — Ankara, Türkiye</h2>
-    <p><strong>Government Sponsored Scholar (YLSY Program)</strong> (December 2013 – May 2020)</p>
-    <ul>
-        <li>Awarded a competitive national scholarship supporting advanced studies abroad.</li>
-        <li>Fulfilled academic and reporting obligations for scholarship continuation.</li>
+    <ul class="styled-list">
+        <li>
+            <strong>Government Sponsored Scholar (YLSY Program)</strong> (December 2013 – May 2020)
+            <ul>
+                <li>Awarded a competitive national scholarship supporting advanced studies abroad.</li>
+                <li>Fulfilled academic and reporting obligations for scholarship continuation.</li>
+            </ul>
+        </li>
     </ul>
 
     <h2>Oak Ridge National Laboratory — Oak Ridge, TN, U.S.A.</h2>
-    <p><strong>Advanced Short-Term Research Opportunity (ASTRO) Intern</strong> (May 2018 – August 2018)</p>
-    <ul>
-        <li>Conducted research on smart manufacturing.</li>
-        <li>Developed data processing scripts and contributed to model validation.</li>
-        <li>Collaborated with multidisciplinary teams on project objectives.</li>
+    <ul class="styled-list">
+        <li>
+            <strong>Advanced Short-Term Research Opportunity (ASTRO) Intern</strong> (May 2018 – August 2018)
+            <ul>
+                <li>Conducted research on smart manufacturing.</li>
+                <li>Developed data processing scripts and contributed to model validation.</li>
+                <li>Collaborated with multidisciplinary teams on project objectives.</li>
+            </ul>
+        </li>
     </ul>
 
     <h2>Kuwait-Turkish Participation Bank — Adana, Türkiye</h2>
-    <p><strong>Retail and Small Business Sales Assistant</strong> (August 2012 – July 2014)</p>
-    <ul>
-        <li>Assisted customers with banking transactions and account services.</li>
-        <li>Supported small business clients with financial products and loan applications.</li>
-        <li>Maintained accurate records and provided administrative support.</li>
+    <ul class="styled-list">
+        <li>
+            <strong>Retail and Small Business Sales Assistant</strong> (August 2012 – July 2014)
+            <ul>
+                <li>Assisted customers with banking transactions and account services.</li>
+                <li>Supported small business clients with financial products and loan applications.</li>
+                <li>Maintained accurate records and provided administrative support.</li>
+            </ul>
+        </li>
     </ul>
 
     <h2>Vakifbank — Adana, Türkiye</h2>
-    <p><strong>Operations and Accounting Intern</strong> (June 2011 – August 2011)</p>
-    <ul>
-        <li>Supported branch operations including account maintenance and transaction processing.</li>
-        <li>Assisted accounting staff with reconciliations and report preparation.</li>
-        <li>Gained foundational experience in banking operations and finance.</li>
+    <ul class="styled-list">
+        <li>
+            <strong>Operations and Accounting Intern</strong> (June 2011 – August 2011)
+            <ul>
+                <li>Supported branch operations including account maintenance and transaction processing.</li>
+                <li>Assisted accounting staff with reconciliations and report preparation.</li>
+                <li>Gained foundational experience in banking operations and finance.</li>
+            </ul>
+        </li>
     </ul>
 
     <h2>Six Flags Darien Lake &amp; Great Adventure — Buffalo, NY &amp; Jackson, NJ, U.S.A.</h2>
-    <p><strong>Sales Representative</strong> (June 2009 – September 2009)</p>
-    <ul>
-        <li>Engaged customers and promoted park services and merchandise.</li>
-        <li>Provided excellent customer service in a fast-paced, high-volume environment.</li>
-        <li>Assisted with event setup and crowd management during peak times.</li>
+    <ul class="styled-list">
+        <li>
+            <strong>Sales Representative</strong> (June 2009 – September 2009)
+            <ul>
+                <li>Engaged customers and promoted park services and merchandise.</li>
+                <li>Provided excellent customer service in a fast-paced, high-volume environment.</li>
+                <li>Assisted with event setup and crowd management during peak times.</li>
+            </ul>
+        </li>
     </ul>
 </main>
 
