Refactor research.html layout and styling
Updated HTML structure and styling for the research page.

--- a/research.html
+++ b/research.html
@@ -20,31 +20,29 @@
     <a href="research.html">Research</a>
     <a href="publications.html">Publications</a>
     <a href="service.html">Service and Awards</a>
+    <a href="advising.html">Advising & Mentorship</a>
 </nav>
 
-<main>
-    <h1 style="text-align: center;">Research</h1>
+<main class="custom-layout">
+    <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Research</h1>
 
-    <p>My research focuses on developing advanced computational methods and optimization models to improve transportation systems’ efficiency and resilience. I integrate operations research, transportation science, energy systems, and data analytics to address complex challenges faced by modern urban mobility and freight logistics.</p>
+    <p style="font-size: 1.1em; margin-bottom: 40px;">My research focuses on developing advanced computational methods and optimization models to improve transportation systems’ efficiency and resilience. I integrate operations research, transportation science, energy systems, and data analytics to address complex challenges faced by modern urban mobility and freight logistics.</p>
 
     <h2>Research Interests</h2>
 
-    <ul>
+    <ul class="styled-list">
         <li>
             <strong>Transportation Systems Modeling &amp; Optimization</strong><br>
             Designing and applying mathematical and computational models to optimize location, routing, scheduling, and resource allocation in transportation networks. This includes innovative approaches for vehicle routing problems, electric vehicle charging, and last-mile delivery logistics.
         </li>
-        <br>
         <li>
             <strong>Energy-Efficient Mobility</strong><br>
             Investigating the integration of electric and alternative fuel vehicles within transportation systems, focusing on energy consumption minimization, infrastructure planning, and economic impact assessment.
         </li>
-        <br>
         <li>
             <strong>Freight and Public Transit Systems</strong><br>
             Developing data-driven models to optimize freight movement and public transit operations, improving service reliability, cost-effectiveness, and overall system performance.
         </li>
-        <br>
         <li>
             <strong>Data Analytics &amp; Simulation for Transportation</strong><br>
             Leveraging large-scale datasets and simulation techniques to evaluate transportation policies, infrastructure investments, and emerging mobility technologies.
