Convert service and awards tables to styled lists
Replaced tables with styled lists for service and awards sections.

--- a/service.html
+++ b/service.html
@@ -5,22 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Taner Cokyasar | Service and Awards</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 30px;
-        }
-        td {
-            padding: 8px 0;
-            vertical-align: top;
-        }
-        .year-col {
-            width: 15%;
-            font-weight: bold;
-            padding-right: 15px;
-        }
-    </style>
 </head>
 <body>
 
@@ -36,43 +20,40 @@
     <a href="research.html">Research</a>
     <a href="publications.html">Publications</a>
     <a href="service.html">Service and Awards</a>
+    <a href="advising.html">Advising & Mentorship</a>
 </nav>
 
-<main>
-    <h1 style="text-align: center;">Service and Awards</h1>
+<main class="custom-layout">
+    <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Service and Awards</h1>
 
     <h2>Service</h2>
-    <table>
-        <tbody>
-            <tr><td class="year-col">2025–</td><td>Area Editor of Infrastructure Economics for <em>The Engineering Economist</em></td></tr>
-            <tr><td class="year-col">2025</td><td>Track Chair – 2025 IISE Annual Meeting &amp; Expo (Engineering Economy, Facilities Design &amp; Planning)</td></tr>
-            <tr><td class="year-col">2024</td><td>Track Chair – 2024 IISE Annual Meeting &amp; Expo (Engineering Economy), Mobi-SPC (Smart Cities and Ubiquitous Climate Change Management)</td></tr>
-            <tr><td class="year-col">2023</td><td>Track Chair – 2023 IISE Annual Meeting &amp; Expo, EUSPN (Adaptive Systems, Intelligent Computing and Applications)</td></tr>
-            <tr><td class="year-col">2023–2025</td><td>Director – IISE Logistics and Supply Chain Division</td></tr>
-            <tr><td class="year-col">2022–2024</td><td>Director – IISE Engineering Economy Division</td></tr>
-            <tr><td class="year-col">2021–</td><td>Editorial Board Member – International Journal of Applied Management Science (IJAMS)</td></tr>
-            <tr><td class="year-col">2019–2021</td><td>President – IISE Logistics and Supply Chain Division Student Leadership Board</td></tr>
-            <tr><td class="year-col">2018–2019</td><td>Vice President – IISE Logistics and Supply Chain Division Student Leadership Board</td></tr>
-            <tr><td class="year-col">2018–</td><td>Member – INFORMS</td></tr>
-            <tr><td class="year-col">2016–</td><td>Member – IISE</td></tr>
-            <tr><td class="year-col">2016–</td><td>Reviewer – TRA, TRB, TRC, IISE, TEM, ITSC, COR, JCLP, TRR, IJSPM, Transportation Letters</td></tr>
-        </tbody>
-    </table>
+    <ul class="styled-list">
+        <li><strong>2025–Present</strong> | Area Editor of Infrastructure Economics for <em>The Engineering Economist</em></li>
+        <li><strong>2025</strong> | Track Chair – 2025 IISE Annual Meeting &amp; Expo (Engineering Economy, Facilities Design &amp; Planning)</li>
+        <li><strong>2024</strong> | Track Chair – 2024 IISE Annual Meeting &amp; Expo (Engineering Economy), Mobi-SPC (Smart Cities and Ubiquitous Climate Change Management)</li>
+        <li><strong>2023</strong> | Track Chair – 2023 IISE Annual Meeting &amp; Expo, EUSPN (Adaptive Systems, Intelligent Computing and Applications)</li>
+        <li><strong>2023–2025</strong> | Director – IISE Logistics and Supply Chain Division</li>
+        <li><strong>2022–2024</strong> | Director – IISE Engineering Economy Division</li>
+        <li><strong>2021–Present</strong> | Editorial Board Member – International Journal of Applied Management Science (IJAMS)</li>
+        <li><strong>2019–2021</strong> | President – IISE Logistics and Supply Chain Division Student Leadership Board</li>
+        <li><strong>2018–2019</strong> | Vice President – IISE Logistics and Supply Chain Division Student Leadership Board</li>
+        <li><strong>2018–Present</strong> | Member – INFORMS</li>
+        <li><strong>2016–Present</strong> | Member – IISE</li>
+        <li><strong>2016–Present</strong> | Reviewer – TRA, TRB, TRC, IISE, TEM, ITSC, COR, JCLP, TRR, IJSPM, Transportation Letters</li>
+    </ul>
 
     <h2>Awards</h2>
-    <table>
-        <tbody>
-            <tr><td class="year-col">2024</td><td>Impact Argonne Award – Argonne National Laboratory</td></tr>
-            <tr><td class="year-col">2019–2020</td><td>E.J. Sierleja Memorial Fellowship – IISE</td></tr>
-            <tr><td class="year-col">2013–2020</td><td>Graduate Fellowship Award – Republic of Turkey Ministry of National Education</td></tr>
-            <tr><td class="year-col">2017–2019</td><td>Helen Jubin Fellowship Award – University of Tennessee</td></tr>
-            <tr><td class="year-col">2018</td><td>Best Track Paper Award – IISE (Spare Parts + Additive Manufacturing), Cokyasar et al.</td></tr>
-            <tr><td class="year-col">2018</td><td>2nd Best Track Paper Award – IISE Engineering Management Division, Cokyasar et al.</td></tr>
-            <tr><td class="year-col">2018</td><td>Extraordinary Professional Promise Award – University of Tennessee</td></tr>
-            <tr><td class="year-col">2017</td><td>Service Recognition Award – University of Tennessee</td></tr>
-            <tr><td class="year-col">2008–2012</td><td>Undergraduate Fellowship – Renaissance Education Foundation</td></tr>
-        </tbody>
-    </table>
+    <ul class="styled-list">
+        <li><strong>2024</strong> | Impact Argonne Award – Argonne National Laboratory</li>
+        <li><strong>2019–2020</strong> | E.J. Sierleja Memorial Fellowship – IISE</li>
+        <li><strong>2013–2020</strong> | Graduate Fellowship Award – Republic of Turkey Ministry of National Education</li>
+        <li><strong>2017–2019</strong> | Helen Jubin Fellowship Award – University of Tennessee</li>
+        <li><strong>2018</strong> | Best Track Paper Award – IISE (Spare Parts + Additive Manufacturing), Cokyasar et al.</li>
+        <li><strong>2018</strong> | 2nd Best Track Paper Award – IISE Engineering Management Division, Cokyasar et al.</li>
+        <li><strong>2018</strong> | Extraordinary Professional Promise Award – University of Tennessee</li>
+        <li><strong>2017</strong> | Service Recognition Award – University of Tennessee</li>
+        <li><strong>2008–2012</strong> | Undergraduate Fellowship – Renaissance Education Foundation</li>
+    </ul>
 </main>
 
 <footer>
