Refactor advising section layout and headings

--- a/advising.html
+++ b/advising.html
@@ -23,9 +23,9 @@
     <a href="advising.html">Advising & Mentorship</a>
 </nav>
 
-<main class="custom-layout">
-    <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Advising and Mentorship</h1>
-    <ul class="styled-list">
+<main class="advising-mentorship">
+    <h2>Advising and Mentorship</h2>
+    <ul>
       <li>
         <strong>2026 | Annabelle Jung</strong>, SULI Summer Intern (My role: Co-Mentor)<br>
         <em>University of Illinois Chicago</em><br>
