Update service section and rename awards to honors

--- a/service.html
+++ b/service.html
@@ -26,32 +26,58 @@
 <main class="custom-layout">
     <h1 style="text-align: center; border-bottom: none; margin-bottom: 30px;">Service and Awards</h1>
 
-    <h2>Service</h2>
+    <h2>Professional Service</h2>
+    
+    <h3>Editorial Service</h3>
     <ul class="styled-list">
-        <li><strong>2025–Present</strong> | Area Editor of Infrastructure Economics for <em>The Engineering Economist</em></li>
-        <li><strong>2025</strong> | Track Chair – 2025 IISE Annual Meeting &amp; Expo (Engineering Economy, Facilities Design &amp; Planning)</li>
-        <li><strong>2024</strong> | Track Chair – 2024 IISE Annual Meeting &amp; Expo (Engineering Economy), Mobi-SPC (Smart Cities and Ubiquitous Climate Change Management)</li>
-        <li><strong>2023</strong> | Track Chair – 2023 IISE Annual Meeting &amp; Expo, EUSPN (Adaptive Systems, Intelligent Computing and Applications)</li>
-        <li><strong>2023–2025</strong> | Director – IISE Logistics and Supply Chain Division</li>
-        <li><strong>2022–2024</strong> | Director – IISE Engineering Economy Division</li>
-        <li><strong>2021–Present</strong> | Editorial Board Member – International Journal of Applied Management Science (IJAMS)</li>
-        <li><strong>2019–2021</strong> | President – IISE Logistics and Supply Chain Division Student Leadership Board</li>
-        <li><strong>2018–2019</strong> | Vice President – IISE Logistics and Supply Chain Division Student Leadership Board</li>
-        <li><strong>2018–Present</strong> | Member – INFORMS</li>
-        <li><strong>2016–Present</strong> | Member – IISE</li>
-        <li><strong>2016–Present</strong> | Reviewer – TRA, TRB, TRC, IISE, TEM, ITSC, COR, JCLP, TRR, IJSPM, Transportation Letters</li>
+        <li><strong>2025–Present</strong> | Area Editor of Infrastructure Economics for <a href="https://www.tandfonline.com/journals/utee20/about-this-journal#editorial-board" target="_blank"><em>The Engineering Economist</em></a></li>
+        <li><strong>2021–2022</strong> | Editorial Board Member – <em>International Journal of Applied Management Science (IJAMS)</em></li>
     </ul>
 
-    <h2>Awards</h2>
+    <h3>Society Leadership</h3>
+    <ul class="styled-list">
+        <li><strong>Present</strong> | President – IISE Engineering Economy Division</li>
+        <li><strong>2023–2025</strong> | Director – IISE Logistics and Supply Chain Division</li>
+        <li><strong>2022–2024</strong> | Director – IISE Engineering Economy Division</li>
+        <li><strong>2019–2021</strong> | President – IISE Logistics and Supply Chain Division Student Leadership Board</li>
+        <li><strong>2018–2019</strong> | Vice President – IISE Logistics and Supply Chain Division Student Leadership Board</li>
+    </ul>
+
+    <h3>Conference Organization</h3>
+    <ul class="styled-list">
+        <li><strong>2026</strong> | Track Chair – IISE Annual Meeting &amp; Expo (Engineering Economy)</li>
+        <li><strong>2025</strong> | Track Chair – IISE Annual Meeting &amp; Expo (Engineering Economy, Facilities Design &amp; Planning)</li>
+        <li><strong>2024</strong> | Track Chair – IISE Annual Meeting &amp; Expo (Engineering Economy), Mobi-SPC (Smart Cities and Ubiquitous Climate Change Management)</li>
+        <li><strong>2023</strong> | Track Chair – IISE Annual Meeting &amp; Expo, EUSPN (Adaptive Systems, Intelligent Computing and Applications)</li>
+    </ul>
+
+    <h3>Peer Review Activities</h3>
+    <ul class="styled-list">
+        <li><strong>Ad-hoc Reviewer:</strong> Transportation Research Part A: Policy and Practice, Transportation Research Part B: Methodological, Transportation Research Part C: Emerging Technologies, Transportation Research Board, Transportation Research Record, Institute of Industrial and Systems Engineers, IEEE Transactions on Engineering Management, IEEE Intelligent Transportation Systems Conference, Computers &amp; Operations Research, International Journal of Sustainable Transportation, Transportation Letters</li>
+    </ul>
+
+    <h3>Professional Memberships</h3>
+    <ul class="styled-list">
+        <li><strong>2018–Present</strong> | Member – INFORMS</li>
+        <li><strong>2016–Present</strong> | Member – IISE</li>
+    </ul>
+
+    <h2>Honors and Awards</h2>
+    
+    <h3>Professional & Academic Honors</h3>
     <ul class="styled-list">
         <li><strong>2024</strong> | Impact Argonne Award – Argonne National Laboratory</li>
-        <li><strong>2019–2020</strong> | E.J. Sierleja Memorial Fellowship – IISE</li>
-        <li><strong>2013–2020</strong> | Graduate Fellowship Award – Republic of Turkey Ministry of National Education</li>
-        <li><strong>2017–2019</strong> | Helen Jubin Fellowship Award – University of Tennessee</li>
         <li><strong>2018</strong> | Best Track Paper Award – IISE (Spare Parts + Additive Manufacturing), Cokyasar et al.</li>
         <li><strong>2018</strong> | 2nd Best Track Paper Award – IISE Engineering Management Division, Cokyasar et al.</li>
         <li><strong>2018</strong> | Extraordinary Professional Promise Award – University of Tennessee</li>
         <li><strong>2017</strong> | Service Recognition Award – University of Tennessee</li>
+    </ul>
+
+    <h3>Fellowships & Scholarships</h3>
+    <ul class="styled-list">
+        <li><strong>2019–2020</strong> | E.J. Sierleja Memorial Fellowship – IISE</li>
+        <li><strong>2017–2019</strong> | Helen Jubin Fellowship Award – University of Tennessee</li>
+        <li><strong>2013–2020</strong> | Graduate Fellowship Award – Republic of Turkey Ministry of National Education</li>
         <li><strong>2008–2012</strong> | Undergraduate Fellowship – Renaissance Education Foundation</li>
     </ul>
 </main>
