Update leadership term dates in service.html

--- a/service.html
+++ b/service.html
@@ -36,7 +36,7 @@
 
     <h3>Society Leadership</h3>
     <ul class="styled-list">
-        <li><strong>Present</strong> | President – IISE Engineering Economy Division</li>
+        <li><strong>2026-2028</strong> | President – IISE Engineering Economy Division</li>
         <li><strong>2023–2025</strong> | Director – IISE Logistics and Supply Chain Division</li>
         <li><strong>2022–2024</strong> | Director – IISE Engineering Economy Division</li>
         <li><strong>2019–2021</strong> | President – IISE Logistics and Supply Chain Division Student Leadership Board</li>
