Add links to dissertation and thesis committee members

--- a/education.html
+++ b/education.html
@@ -31,16 +31,16 @@
             <strong>Ph.D. in Industrial Engineering</strong> (May 2020)<br>
             <em>The University of Tennessee, Knoxville, TN, USA.</em>
             <ul>
-                <li>Dissertation: Economic Feasibility of Adopting Additive Manufacturing for Low-volume Demand</li>
-                <li>Committee: Mingzhou Jin (advisor), Sean Willems, Xueping Li, James Ostrowski</li>
+                <li>Dissertation: <a href="https://trace.tennessee.edu/cgi/viewcontent.cgi?params=/context/utk_graddiss/article/7685/&path_info=utk.ir.td_13642.pdf" target="_blank">Economic Feasibility of Adopting Additive Manufacturing for Low-volume Demand</a></li>
+                <li>Committee: <a href="https://tickle.utk.edu/ise/faculty/mingzhou-jin/" target="_blank">Mingzhou Jin</a> (advisor), <a href="https://haslam.utk.edu/people/profile/sean-willems/" target="_blank">Sean Willems</a>, <a href="https://tickle.utk.edu/ise/faculty/xueping-li/" target="_blank">Xueping Li</a>, <a href="https://tickle.utk.edu/ise/faculty/james-ostrowski/" target="_blank">James Ostrowski</a></li>
             </ul>
         </li>
         <li>
             <strong>M.S. in Industrial Engineering</strong> (December 2016)<br>
             <em>The University of Tennessee, Knoxville, TN, USA.</em>
             <ul>
-                <li>Thesis: A Mixed Integer Linear Programming Approach for Developing Salary Administration Systems</li>
-                <li>Committee: Alberto Garcia-Diaz (advisor), John Kobza, Rapinder Sawhney</li>
+                <li>Thesis: <a href="https://trace.tennessee.edu/cgi/viewcontent.cgi?article=5503&context=utk_gradthes&httpsredir=1" target="_blank">A Mixed Integer Linear Programming Approach for Developing Salary Administration Systems</a></li>
+                <li>Committee: <a href="https://tickle.utk.edu/ise/faculty/emeritus-faculty/alberto-garcia-diaz/" target="_blank">Alberto Garcia-Diaz</a> (advisor), <a href="https://experts.utk.edu/experts/john-kobza/" target="_blank">John Kobza</a>, <a href="https://tickle.utk.edu/ise/remembering-rupy-sawhney/" target="_blank">Rapinder Sawhney</a></li>
             </ul>
         </li>
         <li>
